--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -50,6 +50,14 @@
   }
 }
 
+.b{
+ border: 1px solid black;
+}
+
+.r{
+  border: 1px solid red;
+}
+
 html {
   font-size: 62.5%;
   scroll-behavior: smooth;
