--- a/client/src/components/admin/serviceuser/serviceuser.style.scss
+++ b/client/src/components/admin/serviceuser/serviceuser.style.scss
@@ -1,8 +1,8 @@
-.carer__container{
+.serviceuser__container{
     min-height: 90%;
     border-radius: 1rem;
-background-color: #c2edce;
-   
+background-color: #badfe7;
+    
     padding-right:2rem;
     padding-bottom:2rem;
     padding-left:2rem;
