--- a/client/src/components/user/signin.style.scss
+++ b/client/src/components/user/signin.style.scss
@@ -1,3 +1,85 @@
-.signin-container{
-    min-height: 70vh;
+// .signin-container{
+//     min-height: 70vh;
+// }
+
+.signin__container{
+    
+    padding: 15rem 0;
+    background-image: linear-gradient(to right bottom, #388087, #badfe7 );
+    min-height: 95vh;
+    background-image: linear-gradient(90deg,rgba(white,.9) 0%, 
+         rgba(white, .9) 50%, 
+         transparent 50%),
+        url(../careworker.avif);
+        background-size: cover;
+        background-position: center; /* Center the image */
+        background-repeat: no-repeat;
+
+        @media screen and (min-width : 899px) {
+            // “If [device width] is greater than or equal to 600px, then do {…}”
+             
+              
+           }
+           
+          
+         
+           @media screen and (max-width : 575px) {
+               //If [device width] is less than or equal to 575px, then do {…}”
+               background-image:url(../careworker.avif);
+        background-size: cover;
+        background-position: center; /* Center the image */
+        background-repeat: no-repeat;
+           }
+    // &-form{
+    
+    //     background-image: linear-gradient(90deg,rgba(white,.9) 0%, 
+    //     rgba(white, .9) 50%, 
+    //     transparent 50%),
+    //     url(../careworker.avif);
+    //     background-size: cover;
+    //     background-position: center; /* Center the image */
+    //     background-repeat: no-repeat;
+    //     border-radius: 3px;
+    //     box-shadow: 0 1.5rem 4rem;
+    //    min-height: 70vh;
+    // }
 }
+
+.form__input{
+    font-size: 1.5rem;
+          padding: 1.5rem 2rem;
+          border-radius: 2px;
+          border: none;
+          border-bottom: 3px solid transparent;
+          width: 100%;
+          display: block;
+}
+
+.form__label {
+    font-size: 1.2rem;
+    font-weight: bolder;
+    margin-left: 2rem;
+    margin-top: 0.7rem;
+    display: block;
+    transition: all 0.9s;
+    
+  
+  }
+
+  .text-color{
+    @media screen and (max-width : 575px) {
+        //If [device width] is less than or equal to 575px, then do {…}”
+        color: white;
+    }
+  }
+
+  .error-msg{
+   
+    color: red;
+
+    @media screen and (max-width : 575px) {
+        //If [device width] is less than or equal to 575px, then do {…}”
+        background-color:red ;
+        color: white;
+    }
+  }
