changes to the admin page

--- a/client/src/components/admin/adminhomepage/adminhomepage.style.scss
+++ b/client/src/components/admin/adminhomepage/adminhomepage.style.scss
@@ -59,6 +59,11 @@
  
         min-height: 100vh;
         background-color:#f2f1ef;
+        background-image: 
+        url(../../image/carer.avif);
+        background-size: cover;
+        background-position: center; /* Center the image */
+        background-repeat: no-repeat;
      
     }
 }
