--- a/client/src/components/admin/carer/carer.style.scss
+++ b/client/src/components/admin/carer/carer.style.scss
@@ -1,7 +1,11 @@
 .carer__container{
     min-height: 90%;
     border-radius: 1rem;
-background-color: #c2edce;
+
+background-image: linear-gradient(90deg,rgba(#c2edce,.9) 0%, 
+rgba(white, .2) 100%, 
+transparent 50%);
+
    
     padding-right:2rem;
     padding-bottom:2rem;
