--- a/client/src/components/user/signin.style.scss
+++ b/client/src/components/user/signin.style.scss
@@ -4,13 +4,13 @@
 
 .signin__container{
     
-    padding: 15rem 0;
+    padding: 20rem 0;
     background-image: linear-gradient(to right bottom, #388087, #badfe7 );
     min-height: 95vh;
     background-image: linear-gradient(90deg,rgba(white,.9) 0%, 
          rgba(white, .9) 50%, 
          transparent 50%),
-        url(../careworker.avif);
+        url(../image/careworker.avif);
         background-size: cover;
         background-position: center; /* Center the image */
         background-repeat: no-repeat;
