added github actions

--- a/client/src/components/carerpage/signin.style.scss
+++ b/client/src/components/carerpage/signin.style.scss
@@ -25,7 +25,7 @@
          
            @media screen and (max-width : 575px) {
                //If [device width] is less than or equal to 575px, then do {…}”
-               background-image:url(../careworker.avif);
+               background-image:url(../image/careworker.avif);
         background-size: cover;
         background-position: center; /* Center the image */
         background-repeat: no-repeat;
